[package]
name = "example-custom-poa-node"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"
description = "A custom POA (Proof of Authority) node implementation using Reth"

[dependencies]
# Reth core dependencies (tracks main branch - `just update` fetches latest)
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", branch = "main", features = ["node", "test-utils"] }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-db = { git = "https://github.com/paradigmxyz/reth", branch = "main" }

# Alloy dependencies (let cargo resolve compatible versions)
alloy-consensus = "1"
alloy-genesis = "1"
alloy-primitives = "1"
alloy-eips = "1"
alloy-signer = "1"
alloy-signer-local = "1"
alloy-rlp = "0.3"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
eyre = "0.6"
thiserror = "2"
